Layout issue - highlited text in other langs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -121,12 +121,13 @@ section {
 .highlight {
   color: var(--primary);
   position: relative;
+  display: inline-block;
 }
 
 .highlight::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -6px;
   left: 0;
   width: 100%;
   height: 15px;
